# obsolete-writium

./: Cargo.toml  LICENSE
doc/: customizing.md  safety.md
src/: api.rs  callback.rs  error.rs  lib.rs  main.rs  namespace.rs  prelude.rs  request.rs  response.rs  result.rs  settings.rs  writium.rs
src/api/: api.rs  cache.rs  mod.rs  namespace.rs
src/http/: mod.rs  request.rs  response.rs
src/proto/: mod.rs  request.rs  response.rs
src/proto/request/: body.rs  mod.rs
src/writium/: mod.rs  resource.rs  response_gen.rs  settings.rs  template.rs
src/writus/: cache.rs  mod.rs  resource.rs  response_gen.rs  server.rs  settings.rs  template.rs
