[package]
name = "writus"
version = "0.1.0"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
description = "Static article host based on iron."
license = "MIT"
repository = "https://github.com/PENGUINLIONG/Writus"

[dependencies]
chrono = "0.4.0"
getopts = "0.2"
iron = "0.5.1"
json = "0.11.8"
lazy_static = "0.2"
markdown = "0.2"
log = "0.3"
env_logger = "0.4"
path_buf = "0.1"
