[package]
name = "writium"
version = "0.1.0"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
description = "Static article host based on iron."
license = "MIT"
repository = "https://github.com/PENGUINLIONG/writium"

[dependencies]
# Web service.
hyper-native-tls = "0.2"
iron = "0.5"
url = "1.5"

# Serde.
serde = "1.0"
serde_json = "1.0"

# Logging.
env_logger = "0.4"
log = "0.3"

# Cache system.
queue = "*"
